# FlowPilot

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
flowpilot/: __init__.py  __main__.py  auth.py  cli.py  distributed.py  engine.py  env_config.py  history.py  import_export.py  marketplace.py  marketplace_v2.py  monitoring.py  multi_planner.py  notifications.py  oauth2.py  planner.py  rate_limiter.py  replay.py  reporting.py  scheduler.py  secrets.py  sla.py  testing.py  ui.py  validator.py  versioning.py  webhook.py  webhook_signing.py  widget.py
flowpilot/connectors/: __init__.py  ai_connector.py  aws_connector.py  base.py  database.py  email_connector.py  github_connector.py  google_workspace.py  http_connector.py  jira_connector.py  notification.py  postgres_connector.py  slack.py  stripe_connector.py  transform.py  twilio_connector.py
templates/: content_moderation.json  customer_feedback.json  daily_news_digest.json  data_pipeline.json  email_to_slack.json  github_to_slack.json  incident_response.json  multi_channel_broadcast.json  pr_review_notifier.json  weekly_report.json
